ipython notebook updates

--- a/broca_classification.ipynb
+++ b/broca_classification.ipynb
@@ -53,21 +53,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# Take top X correlation values and assess classifier with 20% testing set\n",
-      "numFeatures = 100#for numFeatures in 100: #xrange(100,100,6000):\n",
-      "x = []\n",
-      "x = features[:,idx[sortedFeatures[-numFeatures:]]]\n",
-      "testSet = np.shape(features)[0] * .20 # use 20% as testing set\n",
-      "clf = tree.DecisionTreeClassifier()\n",
-      "clf = clf.fit(x[testSet:], labels[testSet:])\n",
-      "wrong = np.sum(np.abs(np.squeeze(clf.predict(x[0:testSet-1,:]) - np.transpose(labels[0:testSet-1]))))\n",
-      "print (\"Features = %s, %s percent correct\" % (str(numFeatures), str((testSet-wrong) / testSet)))"
+      "for numFeatures in xrange(100,6000,100):\n",
+      "    x = []\n",
+      "    x = features[:,idx[sortedFeatures[-numFeatures:]]]\n",
+      "    testSet = np.shape(features)[0] * .20 # use 20% as testing set\n",
+      "    clf = tree.DecisionTreeClassifier()\n",
+      "    clf = clf.fit(x[testSet:], labels[testSet:])\n",
+      "    wrong = np.sum(np.abs(np.squeeze(clf.predict(x[0:testSet-1,:]) - np.transpose(labels[0:testSet-1]))))\n",
+      "    print (\"Features = %s, %s percent correct\" % (str(numFeatures), str((testSet-wrong) / testSet)))"
      ],
      "language": "python",
      "metadata": {},
@@ -78,16 +78,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!pip install --user pydot"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "# Graph decision tree:\n",
+      "# If pydot fails, install:\n",
+      "# !pip install --user pydot \n",
       "from sklearn.externals.six import StringIO  \n",
       "import pydot \n",
       "dot_data = StringIO() \n",
@@ -97,7 +90,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
