--- a/CART_classifation/broca_classification.ipynb
+++ b/CART_classifation/broca_classification.ipynb
@@ -16,16 +16,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/home/raid1/margulies/.local/lib/python2.7/site-packages/scipy/__init__.py:111: UserWarning: Numpy 1.6.2 or above is recommended for this version of scipy (detected version 1.6.1)\n",
-        "  UserWarning)\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 1
     },
     {
@@ -53,7 +44,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -76,8 +67,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Features = 100, 0.887444743417 percent correct\n",
-        "Features = 200, 0.901859504132 percent correct"
+        "Features = 100, 0.886964251393 percent correct\n",
+        "Features = 200, 0.899216798001 percent correct"
        ]
       },
       {
@@ -85,7 +76,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 300, 0.890567941572 percent correct"
+        "Features = 300, 0.887925235441 percent correct"
        ]
       },
       {
@@ -93,7 +84,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 400, 0.90282048818 percent correct"
+        "Features = 400, 0.907144916394 percent correct"
        ]
       },
       {
@@ -101,7 +92,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 500, 0.915673649817 percent correct"
+        "Features = 500, 0.918076109937 percent correct"
        ]
       },
       {
@@ -109,7 +100,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 600, 0.9153132808 percent correct"
+        "Features = 600, 0.915673649817 percent correct"
        ]
       },
       {
@@ -117,7 +108,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 700, 0.908826638478 percent correct"
+        "Features = 700, 0.912190082645 percent correct"
        ]
       },
       {
@@ -125,7 +116,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 800, 0.906304055353 percent correct"
+        "Features = 800, 0.901138766096 percent correct"
        ]
       },
       {
@@ -133,7 +124,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 900, 0.910508360561 percent correct"
+        "Features = 900, 0.920598693062 percent correct"
        ]
       },
       {
@@ -141,7 +132,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1000, 0.920238324044 percent correct"
+        "Features = 1000, 0.915073034788 percent correct"
        ]
       },
       {
@@ -149,7 +140,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1100, 0.915433403805 percent correct"
+        "Features = 1100, 0.926244474342 percent correct"
        ]
       },
       {
@@ -157,7 +148,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1200, 0.921439554103 percent correct"
+        "Features = 1200, 0.916034018835 percent correct"
        ]
       },
       {
@@ -165,7 +156,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1300, 0.925283490294 percent correct"
+        "Features = 1300, 0.923361522199 percent correct"
        ]
       },
       {
@@ -173,7 +164,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1400, 0.913030943686 percent correct"
+        "Features = 1400, 0.922040169133 percent correct"
        ]
       },
       {
@@ -181,7 +172,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1500, 0.914352296752 percent correct"
+        "Features = 1500, 0.927565827407 percent correct"
        ]
       },
       {
@@ -189,7 +180,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1600, 0.929127426485 percent correct"
+        "Features = 1600, 0.932490870652 percent correct"
        ]
       },
       {
@@ -197,7 +188,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1700, 0.923241399193 percent correct"
+        "Features = 1700, 0.92600422833 percent correct"
        ]
       },
       {
@@ -205,7 +196,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1800, 0.909547376514 percent correct"
+        "Features = 1800, 0.922400538151 percent correct"
        ]
       },
       {
@@ -213,7 +204,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 1900, 0.932731116663 percent correct"
+        "Features = 1900, 0.9354939458 percent correct"
        ]
       },
       {
@@ -221,7 +212,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2000, 0.912310205651 percent correct"
+        "Features = 2000, 0.903060734192 percent correct"
        ]
       },
       {
@@ -229,7 +220,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2100, 0.906063809341 percent correct"
+        "Features = 2100, 0.894652123775 percent correct"
        ]
       },
       {
@@ -237,7 +228,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2200, 0.90966749952 percent correct"
+        "Features = 2200, 0.900538151067 percent correct"
        ]
       },
       {
@@ -245,7 +236,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2300, 0.885642898328 percent correct"
+        "Features = 2300, 0.88083797809 percent correct"
        ]
       },
       {
@@ -253,7 +244,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2400, 0.913271189698 percent correct"
+        "Features = 2400, 0.912190082645 percent correct"
        ]
       },
       {
@@ -261,7 +252,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2500, 0.927926196425 percent correct"
+        "Features = 2500, 0.914592542764 percent correct"
        ]
       },
       {
@@ -269,7 +260,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2600, 0.933331731693 percent correct"
+        "Features = 2600, 0.930328656544 percent correct"
        ]
       },
       {
@@ -277,7 +268,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2700, 0.927806073419 percent correct"
+        "Features = 2700, 0.926364597348 percent correct"
        ]
       },
       {
@@ -285,7 +276,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2800, 0.928887180473 percent correct"
+        "Features = 2800, 0.929367672497 percent correct"
        ]
       },
       {
@@ -293,7 +284,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 2900, 0.91291082068 percent correct"
+        "Features = 2900, 0.921319431097 percent correct"
        ]
       },
       {
@@ -301,7 +292,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3000, 0.915673649817 percent correct"
+        "Features = 3000, 0.918316355948 percent correct"
        ]
       },
       {
@@ -309,7 +300,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3100, 0.921679800115 percent correct"
+        "Features = 3100, 0.926845089372 percent correct"
        ]
       },
       {
@@ -317,7 +308,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3200, 0.925763982318 percent correct"
+        "Features = 3200, 0.922280415145 percent correct"
        ]
       },
       {
@@ -325,7 +316,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3300, 0.931529886604 percent correct"
+        "Features = 3300, 0.927685950413 percent correct"
        ]
       },
       {
@@ -333,7 +324,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3400, 0.930929271574 percent correct"
+        "Features = 3400, 0.92984816452 percent correct"
        ]
       },
       {
@@ -341,7 +332,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3500, 0.911229098597 percent correct"
+        "Features = 3500, 0.906304055353 percent correct"
        ]
       },
       {
@@ -349,7 +340,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3600, 0.934773207765 percent correct"
+        "Features = 3600, 0.935253699789 percent correct"
        ]
       },
       {
@@ -357,7 +348,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3700, 0.926124351336 percent correct"
+        "Features = 3700, 0.942220834134 percent correct"
        ]
       },
       {
@@ -365,7 +356,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3800, 0.918316355948 percent correct"
+        "Features = 3800, 0.925643859312 percent correct"
        ]
       },
       {
@@ -373,7 +364,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 3900, 0.931529886604 percent correct"
+        "Features = 3900, 0.928406688449 percent correct"
        ]
       },
       {
@@ -381,7 +372,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4000, 0.935734191812 percent correct"
+        "Features = 4000, 0.932851239669 percent correct"
        ]
       },
       {
@@ -389,7 +380,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4100, 0.933571977705 percent correct"
+        "Features = 4100, 0.928286565443 percent correct"
        ]
       },
       {
@@ -397,7 +388,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4200, 0.933331731693 percent correct"
+        "Features = 4200, 0.932731116663 percent correct"
        ]
       },
       {
@@ -405,7 +396,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4300, 0.929607918509 percent correct"
+        "Features = 4300, 0.935734191812 percent correct"
        ]
       },
       {
@@ -413,7 +404,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4400, 0.936575052854 percent correct"
+        "Features = 4400, 0.938136651932 percent correct"
        ]
       },
       {
@@ -421,7 +412,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4500, 0.942100711128 percent correct"
+        "Features = 4500, 0.932370747646 percent correct"
        ]
       },
       {
@@ -429,7 +420,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4600, 0.937776282914 percent correct"
+        "Features = 4600, 0.937415913896 percent correct"
        ]
       },
       {
@@ -437,7 +428,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4700, 0.936575052854 percent correct"
+        "Features = 4700, 0.933932346723 percent correct"
        ]
       },
       {
@@ -445,7 +436,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4800, 0.930208533538 percent correct"
+        "Features = 4800, 0.937776282914 percent correct"
        ]
       },
       {
@@ -453,7 +444,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 4900, 0.936935421872 percent correct"
+        "Features = 4900, 0.942100711128 percent correct"
        ]
       },
       {
@@ -461,7 +452,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5000, 0.937656159908 percent correct"
+        "Features = 5000, 0.94234095714 percent correct"
        ]
       },
       {
@@ -469,7 +460,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5100, 0.929127426485 percent correct"
+        "Features = 5100, 0.928166442437 percent correct"
        ]
       },
       {
@@ -477,7 +468,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5200, 0.933571977705 percent correct"
+        "Features = 5200, 0.942220834134 percent correct"
        ]
       },
       {
@@ -485,7 +476,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5300, 0.929007303479 percent correct"
+        "Features = 5300, 0.936214683836 percent correct"
        ]
       },
       {
@@ -493,7 +484,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5400, 0.934292715741 percent correct"
+        "Features = 5400, 0.929728041515 percent correct"
        ]
       },
       {
@@ -501,7 +492,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5500, 0.920118201038 percent correct"
+        "Features = 5500, 0.929728041515 percent correct"
        ]
       },
       {
@@ -509,7 +500,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5600, 0.924682875264 percent correct"
+        "Features = 5600, 0.930088410532 percent correct"
        ]
       },
       {
@@ -517,7 +508,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5700, 0.932851239669 percent correct"
+        "Features = 5700, 0.922520661157 percent correct"
        ]
       },
       {
@@ -525,7 +516,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5800, 0.917715740919 percent correct"
+        "Features = 5800, 0.927565827407 percent correct"
        ]
       },
       {
@@ -533,7 +524,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Features = 5900, 0.946305016337 percent correct"
+        "Features = 5900, 0.950869690563 percent correct"
        ]
       },
       {
@@ -544,7 +535,32 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.metrics import confusion_matrix\n",
+      "print (confusion_matrix(x[testSet:], labels[testSet:]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "ValueError",
+       "evalue": "Can't handle mix of continuous-multioutput and binary",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-5-95bbd40b50cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtestSet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtestSet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/usr/lib/python2.7/dist-packages/sklearn/metrics/metrics.pyc\u001b[0m in \u001b[0;36mconfusion_matrix\u001b[0;34m(y_true, y_pred, labels)\u001b[0m\n\u001b[1;32m    740\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    741\u001b[0m     \"\"\"\n\u001b[0;32m--> 742\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_clf_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    743\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    744\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s is not supported\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/python2.7/dist-packages/sklearn/metrics/metrics.pyc\u001b[0m in \u001b[0;36m_check_clf_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m         raise ValueError(\"Can't handle mix of {0} and {1}\"\n\u001b[0;32m--> 115\u001b[0;31m                          \"\".format(type_true, type_pred))\n\u001b[0m\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m     \u001b[0;31m# We can't have more than one value on y_type => The set is no more needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mValueError\u001b[0m: Can't handle mix of continuous-multioutput and binary"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -552,7 +568,7 @@
      "input": [
       "# Graph decision tree:\n",
       "# If pydot fails, install:\n",
-      "# !pip install --user pydot \n",
+      "!pip install --user pydot \n",
       "from sklearn.externals.six import StringIO  \n",
       "import pydot \n",
       "dot_data = StringIO() \n",
@@ -564,15 +580,68 @@
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Downloading/unpacking pydot\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "  Downloading pydot-1.0.28.tar.gz\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "  Running setup.py egg_info for package pydot\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "    \r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Requirement already satisfied (use --upgrade to upgrade): pyparsing in /usr/lib/python2.7/dist-packages (from pydot)\r\n",
+        "Requirement already satisfied (use --upgrade to upgrade): distribute in /usr/lib/python2.7/dist-packages (from pydot)\r\n",
+        "Installing collected packages: pydot\r\n",
+        "  Running setup.py install for pydot\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "    \r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Successfully installed pydot\r\n",
+        "Cleaning up...\r\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
